updated roster assignment error messages. fixed flicker bug with comment name label.

--- a/app/assets/stylesheets/application/community.sass
+++ b/app/assets/stylesheets/application/community.sass
@@ -663,6 +663,7 @@ body
                 font: 11px Eurostyle, sans-serif
                 left: 62px
                 line-height: 15px
+                pointer-events: none
                 position: absolute
                 right: auto
                 top: -15px
